# MappingandProcessors

./: .catch2  .gitignore  .gitmodules  CMakeLists.txt  MultiOscModule.c  MultiOscModule.h  README.md  adder.c  adder.h  defs.h  mapping.c  mapping.h  processor.h  tester.c
modules/: EnvModule.c  EnvModule.cpp  EnvModule.h  FilterModule.c  FilterModule.cpp  FilterModule.h  LFOModule.c  LFOModule.cpp  LFOModule.h  MultiOscModule.c  MultiOscModule.h  SimpleOscModule.c  SimpleOscModule.cpp  SimpleOscModule.h  StringModule.cpp  StringModule.h  VCAModule.cpp  VCAModule.h
processors/: CMakeLists.txt  defs.h  event_emitter.h  funcmaps.c  funcmaps.cpp  funcmaps.h  mapping.c  mapping.cpp  mapping.h  midi_sysex.c  midi_sysex.cpp  midi_sysex.h  processor.c  processor.cpp  processor.h  sysex_chunks.c  sysex_chunks.cpp  sysex_chunks.h
procssors/: CMakeLists.txt  defs.h  processor.c
test/: CMakeLists.txt  other_test.cpp  serializing_tests.cpp  test.cpp
